--- a/Launcher/Styles/Main.xaml
+++ b/Launcher/Styles/Main.xaml
@@ -1,4 +1,75 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <Style TargetType="Window" x:Key="m_window">
+        <Setter Property="WindowStyle" Value="None"/>
+        <Setter Property="ResizeMode" Value="NoResize"/>
+        <Setter Property="AllowsTransparency" Value="True"/>
+        <Setter Property="Background" Value="Transparent"/>
+    </Style>
+
+    <Style TargetType="Border" x:Key="m_border">
+        <Setter Property="CornerRadius" Value="8"/>
+        <Setter Property="Margin" Value="20"/>
+        <Setter Property="Padding" Value="25, 0"/>
+        <Setter Property="Effect">
+            <Setter.Value>
+                <DropShadowEffect ShadowDepth="0" BlurRadius="25" Opacity="0.25"/>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style TargetType="TextBlock" x:Key="m_tb">
+        <Setter Property="FontSize" Value="14"/>
+        <Setter Property="FontFamily" Value="/./Font/#Rubik"/>
+        <Setter Property="FontWeight" Value="Medium"/>
+    </Style>
+
+    <Style TargetType="TextBlock" x:Key="m_title">
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="FontSize" Value="18"/>
+        <Setter Property="FontWeight" Value="Bold"/>
+    </Style>
     
+    <Style TargetType="Label" x:Key="m_close">
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="HorizontalAlignment" Value="Right"/>
+
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Label">
+                    <Grid Background="Transparent">
+                        <Grid.Resources>
+                            <Style TargetType="{x:Type Line}">
+                                <Setter Property="Stroke" Value="#696969"/>
+                                <Setter Property="StrokeThickness" Value="1.5"/>
+                            </Style>
+                        </Grid.Resources>
+
+                        <Line X1="0" Y1="0" X2="10" Y2="10"/>
+                        <Line X1="10" Y1="0" X2="0" Y2="10"/>
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style TargetType="ListBox" x:Key="m_listbox">
+        <Setter Property="BorderThickness" Value="1.5"/>
+    </Style>
+
+    <Style TargetType="Button" x:Key="m_btn">
+        <Setter Property="Width" Value="120"/>
+        <Setter Property="Height" Value="35"/>
+        <Setter Property="BorderThickness" Value="1.5"/>
+
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Border BorderThickness="{TemplateBinding BorderThickness}" Padding="{TemplateBinding Padding}" CornerRadius="4" BorderBrush="{TemplateBinding BorderBrush}" Background="{TemplateBinding Background}">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 </ResourceDictionary>
