--- a/Launcher/Styles/Main.xaml
+++ b/Launcher/Styles/Main.xaml
@@ -7,6 +7,10 @@
         <Setter Property="Background" Value="Transparent"/>
     </Style>
 
+    <Style TargetType="Border">
+        <Setter Property="CornerRadius" Value="4"/>
+    </Style>
+
     <Style TargetType="Border" x:Key="m_border">
         <Setter Property="CornerRadius" Value="8"/>
         <Setter Property="Margin" Value="20"/>
@@ -55,12 +59,28 @@
 
     <Style TargetType="ListBox" x:Key="m_listbox">
         <Setter Property="BorderThickness" Value="1.5"/>
+        <Setter Property="Padding" Value="15, 10"/>
+    </Style>
+
+    <Style TargetType="ListBoxItem">
+        <Setter Property="Margin" Value="0, 0, 0, 3"/>
+        <Setter Property="Padding" Value="7, 3"/>
+        <Setter Property="BorderThickness" Value="1.2"/>
+
+        <Setter Property="ContextMenu">
+            <Setter.Value>
+                <ContextMenu>
+                    <MenuItem Header="Добавить ВЛ" />
+                    <MenuItem Header="Удалить ВЛ" />
+                </ContextMenu>
+            </Setter.Value>
+        </Setter>
     </Style>
 
     <Style TargetType="Button" x:Key="m_btn">
         <Setter Property="Width" Value="120"/>
         <Setter Property="Height" Value="35"/>
-        <Setter Property="BorderThickness" Value="1.5"/>
+        <Setter Property="BorderThickness" Value="1.7"/>
 
         <Setter Property="Template">
             <Setter.Value>
@@ -71,5 +91,14 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+    </Style>
+
+    <Style TargetType="TextBox" x:Key="m_tbox">
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="Margin" Value="0,2,0,0"/>
+        <Setter Property="Padding" Value="8, 3"/>
+        <Setter Property="FontSize" Value="12"/>
+        <Setter Property="FontWeight" Value="Medium"/>
+        <Setter Property="BorderThickness" Value="1.5"/>
     </Style>
 </ResourceDictionary>
