--- a/Launcher/Styles/Dark.xaml
+++ b/Launcher/Styles/Dark.xaml
@@ -1,4 +1,40 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+    <Style TargetType="Border" BasedOn="{StaticResource m_border}" x:Key="border">
+        <Setter Property="Background" Value="#202020"/>
+    </Style>
+
+    <Style TargetType="TextBlock" BasedOn="{StaticResource m_tb}">
+        <Setter Property="Foreground" Value="White"/>
+    </Style>
+
+    <Style TargetType="TextBlock" BasedOn="{StaticResource m_title}" x:Key="title">
+        <Setter Property="Foreground" Value="White"/>
+    </Style>
+
+    <Style TargetType="ListBox" BasedOn="{StaticResource m_listbox}">
+        <Setter Property="Background" Value="#2B2B2B"/>
+        <Setter Property="BorderBrush" Value="#1D1D1D"/>
+    </Style>
+
+    <Style TargetType="Button" BasedOn="{StaticResource m_btn}">
+        <Setter Property="Background" Value="#373737"/>
+        <Setter Property="BorderThickness" Value="0"/>
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="#404040"/>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
+    <Style TargetType="TextBox" BasedOn="{StaticResource m_tbox}">
+        <Setter Property="Background" Value="#2B2B2B"/>
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="Foreground" Value="White"/>
+    </Style>
+
+    <Style TargetType="ContextMenu" BasedOn="{StaticResource m_context_menu}">
+        <Setter Property="Background" Value="#202020"/>
+        <Setter Property="BorderBrush" Value="#3F3F3F"/>
+    </Style>
 </ResourceDictionary>
